remove of picture

--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 
 <html>
   <head>
-    <title>AMIGO</title>
+    <title>MY BLOG</title>
   </head>
 
   <body>
-    <h1>Hello guys, this is my blog. please be ready to explore</h1>
-    <img
-      src="https://www.freepik.com/free-vector/tree_6132448.htm#query=tree%20illustration&position=4&from_view=keyword&track=ais"
-      alt="tree for garden"
-    />
+    <h1>Kia ora Taiao! (Hello World!)</h1>
+    <p>This is the beginning of my website home page.</p>
+    <p>It will eventually contain a list of links to all my blogs.</p>
   </body>
 </html>
