adding css to my blog

--- a/index.html
+++ b/index.html
@@ -2,12 +2,36 @@
 
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-compatible" content="ie-edge" />
+    <meta http-equiv="refresh" content="2" />
+    <link rel="stylesheet" href="./styles/main.css" />
     <title>MY BLOG</title>
   </head>
 
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1>
-    <p>This is the beginning of my website home page.</p>
-    <p>It will eventually contain a list of links to all my blogs.</p>
+    <nav>
+      <div class="logo">
+        <h4>THE GAP</h4>
+      </div>
+
+      <div>
+        <ul class="nav-links">
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Work</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </body>
 </html>
