first CSS and HTML build up

--- a/index.html
+++ b/index.html
@@ -1,37 +1,111 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-compatible" content="ie-edge" />
-    <meta http-equiv="refresh" content="2" />
+    <title>AMIGO TECH</title>
     <link rel="stylesheet" href="./styles/main.css" />
-    <title>MY BLOG</title>
   </head>
-
   <body>
-    <nav>
+    <nav class="navbar">
       <div class="logo">
-        <h4>THE GAP</h4>
+        <h4><img src="./images/passport.PNG" alt="image" />GAPSON</h4>
       </div>
 
-      <div>
-        <ul class="nav-links">
-          <li>
-            <a href="#">Home</a>
-          </li>
-          <li>
-            <a href="#">About</a>
-          </li>
-          <li>
-            <a href="#">Work</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
+      <ul class="nav-links" id="nav-links">
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">About</a>
+        </li>
+        <li>
+          <a href="#">Project</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
+      </ul>
     </nav>
+
+    <div class="container">
+      <div class="heading">
+        <h1>TECHNOLOGY ON HEADING ...</h1>
+      </div>
+
+      <div class="box-mission">
+        <h2>What is AMIGO mission</h2>
+        <p>
+          “To <em>enable</em> people and businesses throughout the world to
+          realize their full potential.” “To organize the world's information
+          and make it universally accessible and useful.” “<span
+            >the power of Moore's Law to bring smart,</span
+          >
+          connected devices to every person on <strong>Eath</strong>”
+        </p>
+        <p>
+          For more details on our story, click the
+          <a href="./blog/te-houtaewa-template.html">link</a>
+        </p>
+      </div>
+
+      <div class="boxes-title">
+        <h2><span>FUTURE PROGRAMS</span></h2>
+      </div>
+
+      <div class="box-container">
+        <div class="box">
+          <div class="Training">
+            <h3>What is the purpose of our traing?</h3>
+            <p>
+              State the <strong>long and short-term</strong> goals and explain
+              how the IT course will help to achieve future goal. Express
+              passion and enthusiasm for learning information technology.
+              Discuss hobbies, extra-curricular activities, and voluntary work.
+              <em>SOP shall be unique and free of plagiarism.</em>
+            </p>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="Bootcamp">
+            <h3>What is the purpose of our bootcamp?</h3>
+            <p>
+              Bootcamps are intensive learning courses designed to provide
+              individuals and organisations with the knowledge and abilities
+              necessary for <strong>success</strong> in a particular arena.
+              Primarily, they focus on teaching
+              <emm
+                >programming language proficiency, web development, coding
+                methodology</emm
+              >
+              or other tech-related fields of study
+            </p>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="workshop">
+            <h3>What is the purpose of technology workshop?</h3>
+            <p>
+              The Digital Technologies curriculum enables students to become
+              confident and creative developers of digital solutions through the
+              application of information systems and specific ways of thinking
+              about problem solving.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <div class="footer-items">
+        <div class="footer-logo">
+          <h4><img src="./images/passport.PNG" alt="image" />THE GAP</h4>
+        </div>
+      </div>
+
+      <div class="copy-rights">&copy; 2023 THE GAP. All Rights rerved.</div>
+    </footer>
   </body>
 </html>
