some collection on footer

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <footer class="footer">
       <div class="footer-items">
         <div class="footer-logo">
-          <h4><img src="./images/passport.PNG" alt="image" />THE GAP</h4>
+          <h4><img src="./images/passport.PNG" alt="image" />GAPSON</h4>
         </div>
       </div>
 
