--- a/index.html
+++ b/index.html
@@ -5,94 +5,206 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GAPSON TECH</title>
     <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
+    />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="logo">
-        <h4><img src="./images/passport.PNG" alt="image" />GAPSON</h4>
-      </div>
-
-      <ul class="nav-links" id="nav-links">
-        <li>
-          <a href="#">Home</a>
-        </li>
-        <li>
-          <a href="#">About</a>
-        </li>
-        <li>
-          <a href="#">Project</a>
-        </li>
-        <li>
-          <a href="#">Contact</a>
-        </li>
-      </ul>
-    </nav>
-
-    <div class="container">
-      <div class="heading">
-        <h1>TECHNOLOGY ON HEADING ...</h1>
-      </div>
-
-      <div class="box-mission">
-        <h2>What is AMIGO mission</h2>
-        <p>
-          “To <em>enable</em> people and businesses throughout the world to
-          realize their full potential.” “To organize the world's information
-          and make it universally accessible and useful.” “<span
-            >the power of Moore's Law to bring smart,</span
+    <div class="header">
+      <nav class="navbar">
+        <div class="logo">
+          <a href="index.html"
+            ><h4><img src="./images/passport.PNG" alt="image" />GAPSON</h4></a
           >
-          connected devices to every person on <strong>Eath</strong>”
-        </p>
+        </div>
+
+        <ul class="nav-links" id="nav-links">
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">Product</a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+          <li>
+            <a href="#">Acount</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="row">
+      <div class="col-2">
+        <h1>Technology Is Heading <br />Today's Activities...</h1>
         <p>
-          For more details on our story, click the
-          <a href="./blog/te-houtaewa-template.html">link</a>
+          To organize the world's information <br />and make it universally
+          accessible and useful.
         </p>
+        <a href="./blog/te-houtaewa-template.html" class="btn"
+          >explore more &#8594;</a
+        >
       </div>
-
-      <div class="boxes-title">
-        <h2><span>FUTURE PROGRAMS</span></h2>
+      <div class="col-2">
+        <img src="./images/cover computer.jpg" />
       </div>
+    </div>
 
-      <div class="box-container">
-        <div class="box">
-          <div class="Training">
-            <h3>What is the purpose of our traing?</h3>
-            <p>
-              State the <strong>long and short-term</strong> goals and explain
-              how the IT course will help to achieve future goal. Express
-              passion and enthusiasm for learning information technology.
-              Discuss hobbies, extra-curricular activities, and voluntary work.
-              <em>SOP shall be unique and free of plagiarism.</em>
-            </p>
+    <div class="categories">
+      <div class="small-container">
+        <div class="row">
+          <div class="col-3">
+            <img src="./images/all product mac.jpg" alt="" />
+          </div>
+          <div class="col-3">
+            <img src="./images/mouse page.jpg" alt="" />
+          </div>
+          <div class="col-3">
+            <img src="./images/hp keyboard.jpg" alt="" />
           </div>
         </div>
+      </div>
+    </div>
 
-        <div class="box">
-          <div class="Bootcamp">
-            <h3>What is the purpose of our bootcamp?</h3>
-            <p>
-              Bootcamps are intensive learning courses designed to provide
-              individuals and organisations with the knowledge and abilities
-              necessary for <strong>success</strong> in a particular arena.
-              Primarily, they focus on teaching
-              <emm
-                >programming language proficiency, web development, coding
-                methodology</emm
-              >
-              or other tech-related fields of study
-            </p>
-          </div>
+    <div class="small-container">
+      <h2 class="title">Featured Products</h2>
+      <div class="row">
+        <div class="col-4">
+          <img src="./images/Imac all product.jpg" />
+          <h4>Desktop</h4>
+          <p>$2,845</p>
         </div>
 
-        <div class="box">
-          <div class="workshop">
-            <h3>What is the purpose of technology workshop?</h3>
+        <div class="col-4">
+          <img src="./images/hp keyboard.jpg" />
+          <h4>Keyboard</h4>
+          <p>$513</p>
+        </div>
+
+        <div class="col-4">
+          <img src="./images/imac Magic_Mouse.jpg" />
+          <h4>Mouse</h4>
+          <p>$235</p>
+        </div>
+
+        <div class="col-4">
+          <img src="./images/SP2_HP_CHARGER all product.jpg" />
+          <h4>Cables</h4>
+          <p>$153</p>
+        </div>
+      </div>
+      <h2 class="title">Latest Products</h2>
+      <div class="row">
+        <div class="col-4">
+          <img src="./images/dell all product.jpg" />
+          <h4>Desktop</h4>
+          <p>$2,845</p>
+        </div>
+
+        <div class="col-4">
+          <img src="./images/Imac keyboard.jpg" />
+          <h4>Keyboard</h4>
+          <p>$513</p>
+        </div>
+
+        <div class="col-4">
+          <img src="./images/Mouse all product.png" />
+          <h4>Mouse</h4>
+          <p>$235</p>
+        </div>
+
+        <div class="col-4">
+          <img src="./images/cable all product.jpg" />
+          <h4>Cables</h4>
+          <p>$153</p>
+        </div>
+
+        <div class="col-4">
+          <img src="./images/flash.jpg" />
+          <h4>Flash Disk</h4>
+          <p>$103</p>
+        </div>
+
+        <div class="col-4">
+          <img src="./images/SSD.jpg" />
+          <h4>SSD Hard disk</h4>
+          <p>$165</p>
+        </div>
+
+        <div class="col-4">
+          <img src="./images/hard disk.jpg" />
+          <h4>Hard Disk</h4>
+          <p>$112</p>
+        </div>
+
+        <div class="col-4">
+          <img src="./images/RAM.jpg" />
+          <h4>RAM</h4>
+          <p>$145</p>
+        </div>
+      </div>
+    </div>
+    <div class="offer">
+      <div class="small-container">
+        <div class="row">
+          <div class="col-2">
+            <img src="./images/bonus.jpg" class="offer-computer" />
+          </div>
+          <div class="col-2">
+            <p>Exclusively available on GAPSON Store</p>
+            <h1>Smart apple desktop</h1>
+            <small
+              >Pout EYES 4 Laptop Stand Riser - 360° Rotating Aluminium - Silver
+              Support up to 17" Laptop, Macbook Ultrabook</small
+            >
+            <a href="" class="btn">Order Now &#8594;</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="testimonies">
+      <div class="small-container">
+        <div class="row">
+          <div class="col-3">
+            <i class="fa-quote-left"></i>
             <p>
-              The Digital Technologies curriculum enables students to become
-              confident and creative developers of digital solutions through the
-              application of information systems and specific ways of thinking
-              about problem solving.
+              I confessed that I am a sinner and that I was trying to find life
+              in other people and myself. I acknowledged that He sent Jesus to
+              die on the cross so that I can be saved from my sin and have
+              eternal life.
             </p>
+            <img src="./images/grant.jpg" />
+            <h3>REGIS GRANT</h3>
+          </div>
+          <div class="col-3">
+            <i class="fa-quote-left"></i>
+            <p>
+              I confessed that I am a sinner and that I was trying to find life
+              in other people and myself. I acknowledged that He sent Jesus to
+              die on the cross so that I can be saved from my sin and have
+              eternal life.
+            </p>
+            <img src="./images/kevin.jpg" />
+            <h3>MUTONI KEVINE</h3>
+          </div>
+          <div class="col-3">
+            <i class="fa-quote-left"></i>
+            <p>
+              I confessed that I am a sinner and that I was trying to find life
+              in other people and myself. I acknowledged that He sent Jesus to
+              die on the cross so that I can be saved from my sin and have
+              eternal life.
+            </p>
+            <img src="./images/m.gaelle.jpg" />
+            <h3>IMMACULEE ZENA</h3>
           </div>
         </div>
       </div>
