linking index.html with other html files

--- a/index.html
+++ b/index.html
@@ -62,12 +62,11 @@
         <div class="row">
           <div class="col-3">
             <img src="./images/all product mac.jpg" alt="" />
-          </div>
-          <div class="col-3">
-            <img src="./images/mouse page.jpg" alt="" />
-          </div>
-          <div class="col-3">
-            <img src="./images/hp keyboard.jpg" alt="" />
+            <h2>
+              If you like to know how to use inline and inline-block <br />for
+              building your website.
+            </h2>
+            <a href="./blog/html-css.html" class="btn">explore more &#8594;</a>
           </div>
         </div>
       </div>
@@ -80,26 +79,13 @@
           <img src="./images/Imac all product.jpg" />
           <h4>Desktop</h4>
           <p>$2,845</p>
-        </div>
-
-        <div class="col-4">
-          <img src="./images/hp keyboard.jpg" />
-          <h4>Keyboard</h4>
-          <p>$513</p>
-        </div>
-
-        <div class="col-4">
-          <img src="./images/imac Magic_Mouse.jpg" />
-          <h4>Mouse</h4>
-          <p>$235</p>
-        </div>
-
-        <div class="col-4">
-          <img src="./images/SP2_HP_CHARGER all product.jpg" />
-          <h4>Cables</h4>
-          <p>$153</p>
+          <h2>To know our identity and values and learn from them</h2>
+          <a href="./blog/identity-values.html" class="btn"
+            >explore more &#8594;</a
+          >
         </div>
       </div>
+
       <h2 class="title">Latest Products</h2>
       <div class="row">
         <div class="col-4">
@@ -119,36 +105,6 @@
           <h4>Mouse</h4>
           <p>$235</p>
         </div>
-
-        <div class="col-4">
-          <img src="./images/cable all product.jpg" />
-          <h4>Cables</h4>
-          <p>$153</p>
-        </div>
-
-        <div class="col-4">
-          <img src="./images/flash.jpg" />
-          <h4>Flash Disk</h4>
-          <p>$103</p>
-        </div>
-
-        <div class="col-4">
-          <img src="./images/SSD.jpg" />
-          <h4>SSD Hard disk</h4>
-          <p>$165</p>
-        </div>
-
-        <div class="col-4">
-          <img src="./images/hard disk.jpg" />
-          <h4>Hard Disk</h4>
-          <p>$112</p>
-        </div>
-
-        <div class="col-4">
-          <img src="./images/RAM.jpg" />
-          <h4>RAM</h4>
-          <p>$145</p>
-        </div>
       </div>
     </div>
     <div class="offer">
@@ -159,12 +115,10 @@
           </div>
           <div class="col-2">
             <p>Exclusively available on GAPSON Store</p>
-            <h1>Smart apple desktop</h1>
-            <small
-              >Pout EYES 4 Laptop Stand Riser - 360° Rotating Aluminium - Silver
-              Support up to 17" Laptop, Macbook Ultrabook</small
+            <h2>If you wish to know our learning plan and give advice</h2>
+            <a href="./blog/learning-plan.html" class="btn"
+              >Order Now &#8594;</a
             >
-            <a href="" class="btn">Order Now &#8594;</a>
           </div>
         </div>
       </div>
