adding new file

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#">Home</a>
           </li>
           <li>
-            <a href="#">Product</a>
+            <a href="./blog/blog.html">Blog</a>
           </li>
           <li>
             <a href="#">About</a>
@@ -45,8 +45,8 @@
       <div class="col-2">
         <h1>Technology Is Heading <br />Today's Activities...</h1>
         <p>
-          To organize the world's information <br />and make it universally
-          accessible and useful.
+          You want to know more about <strong>Te-huataewa</strong> <br />and
+          make it universally accessible and useful.
         </p>
         <a href="./blog/te-houtaewa-template.html" class="btn"
           >explore more &#8594;</a
@@ -106,6 +106,8 @@
           <p>$235</p>
         </div>
       </div>
+      <h2>If you want to know more about javaScript-DOM</h2>
+      <a href="./blog/javascript-dom.html" class="btn">explore more &#8594;</a>
     </div>
     <div class="offer">
       <div class="small-container">
