--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#">Home</a>
           </li>
           <li>
-            <a href="./blog/blog.html">Blog</a>
+            <a href="./blog/emotional-intelligence.html">Blog</a>
           </li>
           <li>
             <a href="#">About</a>
