adding blog file

--- a/index.html
+++ b/index.html
@@ -26,18 +26,9 @@
             <a href="#">Home</a>
           </li>
           <li>
-            <a href="./blog/emotional-intelligence.html">Blog</a>
+            <a href="./blog/blog.html">Blog</a>
           </li>
           <li>
-            <a href="#">About</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
-          </li>
-          <li>
-            <a href="#">Acount</a>
-          </li>
-        </ul>
       </nav>
     </div>
 
@@ -48,9 +39,6 @@
           You want to know more about <strong>Te-huataewa</strong> <br />and
           make it universally accessible and useful.
         </p>
-        <a href="./blog/te-houtaewa-template.html" class="btn"
-          >explore more &#8594;</a
-        >
       </div>
       <div class="col-2">
         <img src="./images/cover computer.jpg" />
@@ -62,11 +50,7 @@
         <div class="row">
           <div class="col-3">
             <img src="./images/all product mac.jpg" alt="" />
-            <h2>
-              If you like to know how to use inline and inline-block <br />for
-              building your website.
-            </h2>
-            <a href="./blog/html-css.html" class="btn">explore more &#8594;</a>
+    
           </div>
         </div>
       </div>
@@ -79,10 +63,6 @@
           <img src="./images/Imac all product.jpg" />
           <h4>Desktop</h4>
           <p>$2,845</p>
-          <h2>To know our identity and values and learn from them</h2>
-          <a href="./blog/identity-values.html" class="btn"
-            >explore more &#8594;</a
-          >
         </div>
       </div>
 
@@ -106,8 +86,6 @@
           <p>$235</p>
         </div>
       </div>
-      <h2>If you want to know more about javaScript-DOM</h2>
-      <a href="./blog/javascript-dom.html" class="btn">explore more &#8594;</a>
     </div>
     <div class="offer">
       <div class="small-container">
@@ -117,7 +95,7 @@
           </div>
           <div class="col-2">
             <p>Exclusively available on GAPSON Store</p>
-            <h2>If you wish to know our learning plan and give advice</h2>
+            <h2>If you wish to know more about bonus</h2>
             <a href="./blog/learning-plan.html" class="btn"
               >Order Now &#8594;</a
             >
